# campers

./: .gitignore  404.html  Justfile  README.md  behave.ini  index.html  mkdocs.yml  moondock.py  pyproject.toml
.github/workflows/: docs.yml  integration-tests.yml  publish.yml  unit-tests.yml
campers/: __init__.py  __main__.py  config.py  constants.py  ec2.py  instance_overview_widget.py  lifecycle.py  portforward.py  pricing.py  ssh.py  sync.py  templates.py  utils.py
campers/cli/: __init__.py  main.py  parsing.py
campers/core/: __init__.py  cleanup.py  config.py  interfaces.py  run_executor.py  setup.py  signals.py  utils.py
campers/logging/: filters.py  formatters.py  handlers.py
campers/providers/: __init__.py
campers/services/: __init__.py  ansible.py  portforward.py  ssh.py  sync.py
campers/tui/: app.py  exit_modal.py  instance_overview_widget.py  styling.py  terminal.py  widgets.py
commands/: index.html
configuration/: index.html
docker/python-ssh/: Dockerfile
docs/: commands.md  configuration.md  examples.md  getting-started.md  index.md
examples/: index.html
features/: cli.feature  config.feature  ec2_ami.feature  ec2_errors.feature  ec2_launch.feature  ec2_security_groups.feature  ec2_ssh_keys.feature  ec2_termination.feature  environment.py  environment_forwarding.feature  graceful_shutdown.feature  instance-list.feature  mutagen_sync.feature  port_forwarding.feature  setup_command.feature  setup_script_execution.feature  skeleton.feature  ssh_command_execution.feature  ssh_connection.feature  startup_script.feature  stop_command.feature  test_production_separation.feature  tui_live_updates.feature  user_friendly_errors.feature
features/steps/: cli_steps.py  common_steps.py  conditional_cleanup_steps.py  config_steps.py  diagnostics_utils.py  docker_helpers.py  docker_manager.py  doctor_command_steps.py  ec2_steps.py  environment_steps.py  graceful_shutdown_steps.py  init_command_steps.py  instance_list_steps.py  localstack_steps.py  mutagen_mocking.py  mutagen_steps.py  pilot_steps.py  port_forwarding_steps.py  setup_command_steps.py  setup_script_steps.py  skeleton_steps.py  ssh_steps.py  startup_script_steps.py  test_infrastructure_steps.py  test_production_separation_steps.py  tui_live_updates_steps.py  tui_status_panel_steps.py  (+1 more)
getting-started/: index.html
moondock/: __init__.py  __main__.py  ansible.py  config.py  ec2.py  instance_overview_widget.py  portforward.py  pricing.py  ssh.py  sync.py  utils.py
search/: search_index.json
tests/: README.md  conftest.py  test_cli.py  test_config.py  test_ec2.py  test_environment.py  test_harness_artifacts.py  test_harness_configuration_env.py  test_harness_diagnostics.py  test_harness_dry_run.py  test_harness_event_bus.py  test_monitor_controller.py  test_moondock.py  test_mutagen_session_manager.py  test_pilot_extension.py  test_portforward.py  test_ssh.py  test_ssh_container_pool.py  test_sync.py
(+184 files in other folders)
