[project]
name = "moondock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "boto3>=1.40.42",
    "fire>=0.7.1",
    "paramiko>=3.0.0,<4.0.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sshtunnel>=0.4.0",
    "textual>=6.2.0",
]

[project.scripts]
moondock = "moondock.__main__:main"

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "moto[ec2]>=5.1.13",
    "ruff>=0.13.2",
]

[tool.setuptools]
packages = ["moondock"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
norecursedirs = ["tmp", ".git", ".venv", "__pycache__"]
