[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campers"
version = "0.1.0"
description = "CLI tool for managing remote development environments on AWS EC2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["aws", "ec2", "development", "remote", "cloud", "ssh", "ansible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.40.42",
    "fire>=0.7.1",
    "omegaconf>=2.3.0",
    "paramiko>=3.0.0,<4.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sshtunnel>=0.4.0",
    "textual>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/kamilc/campers"
Repository = "https://github.com/kamilc/campers"
Issues = "https://github.com/kamilc/campers/issues"

[project.scripts]
campers = "campers.__main__:main"

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "docker>=7.1.0",
    "moto[ec2]>=5.1.13",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.setuptools]
packages = ["campers"]

[tool.setuptools.package-data]
campers = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
norecursedirs = ["tmp", ".git", ".venv", "__pycache__"]
